# nemotron-35-asr-streaming-webgpu

./: Cargo.toml  Makefile  implementation_plan.md  index.html
.cargo/: config.toml
src/: audio.rs  decoder.rs  lib.rs  vocab.rs
src/model/: attention.rs  conformer.rs  mod.rs  rnnt.rs  subsampling.rs
tools/: convert_nemo_weights.py
