[package]
name = "nemotron-35-asr-streaming-webgpu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["gpu"]
gpu = ["burn-wgpu", "web-sys", "js-sys"]

[dependencies]
burn = "0.21.0"
burn-flex = "0.21.0"
burn-wgpu = { version = "0.21.0", optional = true }
wasm-bindgen = "0.2"
getrandom_04 = { package = "getrandom", version = "0.4.2", features = ["wasm_js"] }
getrandom_03 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }
rustfft = "6.2.0"
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console", "Gpu", "GpuAdapter", "GpuDevice", "GpuQueue"], optional = true }
safetensors = "0.4.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"